# Sattracker_PundS

./: Power Point Presentation.pptx  README.md  Trackersoftware Description.docx
Tracker_Code/: CMakeLists.txt  main.c  main.py
Tracker_Code/HMC5883L/: hmc5883l.c  hmc5883l.h
Tracker_Code/MPU_6050/: mpu_6050.c  mpu_6050.h
